<resources>
    <string name="app_name">YTU app</string>
    <string name="ytuCourse">YTU Course</string>

    <string name="homePage">Home Page</string>
    <string name="welcomeStr">Welcome</string>
    <string name="accountStr">Account</string>
    <string name="coursesStr">Courses</string>
    <string name="reportStr">Reports</string>
    <string name="notificationsStr">Notifications</string>

    <string name="createNewCourseStr">Create New Course</string>
    <string name="enterCourseNameStr">Enter Course Name*</string>
    <string name="enterCourseCodeStr">Enter Course Code*</string>
    <string name="enterNumberStr">Enter Number of Groups*</string>
    <string name="createCourseStr">Create Course</string>
    <string name="addDeleteInstStr">Add / Delete instructor</string>
    <string name="selectInstructorStr">Select instructor</string>
    <string name="selectedInstructorStr">Selected instructors</string>

    <string name="filter">Filter Courses</string>
    <string name="attendingStr">Attending</string>
    <string name="completedStr">Completed</string>
    <string name="yearStr">Year</string>
    <string name="enterYearStr">Enter Year</string>
    <string name="filterStr">Apply</string>
    <string name="emptyListStr">Empty List</string>
    <string name="resetStr">Reset</string>
    <string name="closeStr">Close</string>
    <string name="courseDetail">Course Detail</string>
    <string name="addStd">Add Student</string>
    <string name="deleteStd">Delete Student</string>
    <string name="addSingleStd">Enter Student ID</string>
    <string name="addSingleInst">Enter Instructor ID*</string>
    <string name="addStr">Add</string>
    <string name="orStr">OR</string>
    <string name="uploadfile">Upload CSV File</string>
    <string name="assignInst">Assign Instructor to Group</string>
    <string name="enterInstId">Enter Instructor Id</string>
    <string name="deleteCrs">Delete Course</string>
    <string name="delete">Delete</string>
    <string name="addDeleteGroup">Add / Delete Group</string>
    <string name="addNewGr">Add New Group</string>
    <string name="newGr">**Click Button to add new Group</string>
    <string name="enterGrNo">Enter Group No*</string>
    <string name="seeGrDetail">See Group Detail</string>
    <string name="stdList">Student List</string>

    <string name="groupDetail">Group Detail</string>
    <string name="seeDetails">See Details</string>

    <string name="UserLoginHeader">User Login</string>
    <string name="NoAccountHead">You do not have account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name*</string>
    <string name="surname">Surname*</string>
    <string name="stID">ID*</string>
    <string name="emailAddress">Email Address*</string>
    <string name="password">Password*</string>
    <string name="create_account">Create Account</string>
    <string name="toolBarTitle">Registration Page</string>
    <string name="passwordLength">*Password must be at least 6 characters.</string>
    <string name="showPassword">Show password</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="account_info">Account info:</string>
    <string name="name_acc">Name:</string>
    <string name="srName_acc">Surname:</string>
    <string name="stdID_acc">Student ID:</string>
    <string name="Email_acc">Email Address:</string>
    <string name="password_acc">Password:</string>
    <string name="phone_num">Phone Number:</string>
    <string name="educ_info_acc">Education Status:</string>
    <string name="instagram">Instagram Account:</string>
    <string name="twitter">Twitter Account:</string>
    <string name="empty">NULL</string>
    <string name="prv">Keep private</string>
    <string name="log_out">Log out</string>
    <string name="std">Student</string>
    <string name="inst">Instructor</string>
    <string name="update">Update</string>
    <string name="select">Select one</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="deleteImg">Delete Image</string>
    <string name="backStr">Back</string>
    <string name="myCoursesStr">My Courses</string>
    <string name="myAccountStr">My Account</string>
    <string name="enterHere">Enter here</string>
</resources>