<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserLoginHeader"
                android:textColor="@color/my_primary"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="36sp"
                android:layout_marginBottom="30dp">
            </TextView>

            <EditText
                android:id="@+id/emailAddress_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:hint="@string/emailAddress"
                android:textColorHint="@color/hintColor"
                android:drawableStart="@drawable/mail_icon"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp">
            </EditText>

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:hint="@string/password"
                android:textColorHint="@color/hintColor"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp">
            </EditText>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/my_primary">
                </Button>

                <CheckBox
                    android:id="@+id/onOff_password_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showPassword"
                    android:textColor="@color/black"
                    android:layout_gravity="end">
                </CheckBox>

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoAccountHead"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_margin="5dp">
            </TextView>

            <Button
                android:id="@+id/createAcc_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/my_primary">
            </Button>

            <TextView
                android:id="@+id/change_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:layout_marginBottom="0dp"
                android:textColor="@color/black">
            </TextView>

            <ProgressBar
                android:id="@+id/progressBar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            </ProgressBar>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>