<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/barId_ra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_primary"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn_ra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:backgroundTint="@color/my_primary"
            android:contentDescription="@string/login"
            android:padding="10dp"
            android:layout_gravity="center"
            android:alpha="1">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ytuCourse"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            android:padding="15dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/barId_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg1"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="35dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textColor="@color/my_primary">
                </TextView>

                <EditText
                    android:id="@+id/name_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="8dp"
                    android:background="@drawable/box"
                    android:layout_marginBottom="20dp">
                </EditText>

                <EditText
                    android:id="@+id/surname_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="8dp"
                    android:background="@drawable/box"
                    android:layout_marginBottom="20dp">
                </EditText>

                <EditText
                    android:id="@+id/stdID_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stID"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:drawableStart="@drawable/person_icon"
                    android:drawablePadding="8dp"
                    android:background="@drawable/box"
                    android:layout_marginBottom="20dp">
                </EditText>

                <EditText
                    android:id="@+id/email_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailAddress"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/mail_icon"
                    android:drawablePadding="8dp"
                    android:background="@drawable/box"
                    android:layout_marginBottom="20dp">
                </EditText>

                <EditText
                    android:id="@+id/password_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/hintColor"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="8dp"
                    android:background="@drawable/box"
                    android:layout_marginBottom="5dp">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordLength"
                    android:textColor="@color/red"
                    android:layout_marginBottom="12dp">
                </TextView>

                <Button
                    android:id="@+id/createAcc_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/my_primary"
                    android:layout_marginBottom="0dp">
                </Button>

                <ProgressBar
                    android:id="@+id/progressbar_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>