<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCourseActivity">

    <LinearLayout
        android:id="@+id/tabBar_cca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="@color/my_primary">

        <ImageButton
            android:id="@+id/backBtn_cca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:backgroundTint="@color/my_primary"
            android:contentDescription="@string/backStr"
            android:padding="10dp"
            android:layout_gravity="center">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myCoursesStr"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="15dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout_cca"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabBar_cca"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg1">

        <ProgressBar
            android:id="@+id/progressBar_cca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">
        </ProgressBar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createNewCourseStr"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/my_primary"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="10dp">
        </TextView>

        <EditText
            android:id="@+id/courseNameId_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterCourseNameStr"
            android:textColorHint="@color/hintColor"
            android:inputType="text"
            android:textColor="@color/black"
            android:drawableStart="@drawable/course_icon"
            android:drawablePadding="10dp"
            android:layout_marginBottom="5dp">
        </EditText>

        <EditText
            android:id="@+id/courseCodeId_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterCourseCodeStr"
            android:textColorHint="@color/hintColor"
            android:inputType="text"
            android:textColor="@color/black"                android:drawableStart="@drawable/course_icon"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        </EditText>

        <EditText
            android:id="@+id/grupNumId_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterNumberStr"
            android:textColorHint="@color/hintColor"
            android:inputType="number"
            android:textColor="@color/black"
            android:drawableStart="@drawable/groups_icon"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        </EditText>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <!-- Inside text input layout add
                  an auto complete text view
                    and make its input type to none-->
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_cc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/selectInstructorStr"
                android:textColor="@color/black"
                android:completionThreshold="1"
                android:theme="@style/CustomAutoCompleteTextView">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectedInstructorStr"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructorList_cca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <Button
            android:id="@+id/createCourseBtn_cca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createCourseStr"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/my_third"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">
        </Button>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>