<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseActivity">

    <LinearLayout
        android:id="@+id/coursePageBar_ca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtn_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:backgroundTint="@color/my_primary"
            android:contentDescription="@string/backStr"
            android:padding="10dp"
            android:layout_gravity="center">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myCoursesStr"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="15dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filterArea_ca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coursePageBar_ca"
        app:layout_constraintBottom_toTopOf="@id/rvAreaId_ca"
        android:background="@color/cc">


        <RadioGroup
            android:id="@+id/radioGroupId_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/attendingRadioBtnId_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendingStr"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp">
            </RadioButton>

            <RadioButton
                android:id="@+id/completeRadioBtnId_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completedStr"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp">
            </RadioButton>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/yearRadioBtnId_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yearStr"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginEnd="18dp">
            </RadioButton>

            <EditText
                android:id="@+id/yearTxtId_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enterYearStr"
                android:textColorHint="@color/hintColor"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:visibility="visible">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/filterBtnId_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="30dp"
                android:backgroundTint="@color/my_forth">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:paddingStart="12dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="start">
                    </TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/filter_icon"
                        android:layout_gravity="end"
                        android:paddingEnd="12dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">
                    </ImageView>

                </GridLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/resetBtnId_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="30dp"
                android:backgroundTint="@color/my_forth"
                android:layout_marginStart="10dp">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resetStr"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:paddingStart="12dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="start">
                    </TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/reset_icon"
                        android:layout_gravity="end"
                        android:paddingEnd="12dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">
                    </ImageView>

                </GridLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvAreaId_ca"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterArea_ca"
        android:background="@color/cc">


        <TextView
            android:id="@+id/emptyListTxtId_ca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emptyListStr"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recycleViewId_ca"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:visibility="gone">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewId_ca"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyListTxtId_ca"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="12dp"
            android:visibility="visible">
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cc_fab_id_ca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/add_course_icon"
        android:backgroundTint="@color/my_forth"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>